--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "http-server": "^0.11.1",
     "mysql": "^2.16.0",
     "nunjucks": "^3.1.4",
+    "shortid": "^2.2.14",
     "sqlite3": "^4.0.4"
   },
   "devDependencies": {},
