--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "browserify": "^16.2.3",
     "express": "^4.16.4",
     "express-session": "^1.15.6",
+    "handbrake-js": "^3.0.7",
     "http-server": "^0.11.1",
     "mysql": "^2.16.0",
     "nunjucks": "^3.1.4",
