--- a/package.json
+++ b/package.json
@@ -4,26 +4,16 @@
   "description": "A web app to aid in the creation of interactive online three-dimensional museum exhibits.",
   "main": "app.js",
   "dependencies": {
-    "aframe-extras.grid": "^4.2.0",
     "bcrypt": "^3.0.2",
     "body-parser": "^1.18.3",
-    "browserify": "^16.2.3",
     "express": "^4.16.4",
     "express-session": "^1.15.6",
     "ffmpeg": "0.0.4",
-    "file-type": "^10.5.0",
-    "handbrake-js": "^3.0.7",
-    "http-server": "^0.11.1",
-    "mime-types": "^2.1.21",
     "multer": "^1.4.1",
     "mysql": "^2.16.0",
     "nunjucks": "^3.1.4",
-    "read-chunk": "^3.0.0",
     "sharp": "^0.21.0",
-    "shortid": "^2.2.14",
-    "socket.io": "^2.2.0",
-    "sqlite3": "^4.0.4",
-    "video-thumbnail": "^1.2.0"
+    "shortid": "^2.2.14"
   },
   "devDependencies": {},
   "scripts": {
